# TabuSearch

./: CMakeLists.txt  Exception.h  Solution.cpp  TabuSearch.cpp  TabuSearch.sln  TabuSearch.vcxproj  TabuSearch.vcxproj.filters  main.cpp
Debug/: TabuSearch.ilk  vc142.idb
Debug/TabuSearch.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TabuSearch.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TabuSearch/: Exception.h  Matrix.h  TabuSearch.vcxproj  TabuSearch.vcxproj.filters
include/: Solution.h  TabuSearch.h
src/: TabuSearch.cpp
tests/: test.txt  test1.txt  test2.txt
